Updating all services and controller to use dependency injection
