# src/routes/index.ts
@@ -6,6 +6,6 @@ import { specificationRoutes } from "./specification.routes";
 const router = Router();
 
 router.use("/categories", categoriesRoutes);
-router.use("/specification", specificationRoutes);
+router.use("/specifications", specificationRoutes);
 
 export { router };
